--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ html {
 	border-radius: 0.5em;
 	box-shadow: 0.3em 0.3em rgba(0, 0, 0, 0.5);
 	border: 0.2em solid rgb(78, 39, 11);
-	background-size: 100%;
+	background-size: cover;
 }
 
 h1 {
