--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ html {
 
 #content {
 	background: linear-gradient(rgb(0, 108, 108), rgb(0, 74, 74));
-	background-size: contain;
+	background-size: 100%;
 	height: 100vh;
 	padding-top: 1em;
 }
