--- a/styles.css
+++ b/styles.css
@@ -128,15 +128,19 @@ button:active {
 	#table {
 		min-width: 40vh;
 		max-width: 100vw;
-		padding: 3em 2em;
+		padding: 2em 1.5em;
 		border-radius: 0%;
 		border-right: none;
 		border-left: none;
+		border-top: none;
 	}
 	#calculator {
 		width: 100%;
 	}
 	h1 {
-		font-size: 1.4em;
+		font-size: 1.2em;
+	}
+	#content {
+		padding-top: 0em;
 	}
 }
