--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ html {
 
 	background: linear-gradient(rgb(0, 108, 108), rgb(0, 74, 74));
 	background-attachment: fixed;
+	overflow: hidden;
 }
 
 #content {
