--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,61 @@
 @import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap");
+
+#calculator-app {
+	height: 100vh;
+}
+
+.github * {
+	font-family: "Noto Sans", serif;
+}
+
+.github {
+	scale: 50%;
+	margin: 2rem 0;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+}
+
+.github a {
+	text-decoration: none;
+	width: fit-content;
+}
+
+.github p {
+	margin-top: 0.8rem;
+	color: black;
+	text-align: center;
+	font-size: 1.2rem;
+	width: 100%;
+	font-weight: 600;
+}
+
+.github a div:hover {
+	filter: brightness(80%);
+}
+
+.github a div {
+	font-weight: 600;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	background-color: black;
+	color: white;
+	text-align: center;
+	padding: 1.2rem;
+	font-size: 2rem;
+	border-radius: 1rem;
+	width: fit-content;
+}
+
+.github i {
+	font-size: 180%;
+	margin-right: 1rem;
+}
 
 * {
 	margin: 0px;
@@ -13,13 +70,10 @@ html {
 
 	background: linear-gradient(rgb(0, 108, 108), rgb(0, 74, 74));
 	background-attachment: fixed;
-	overflow: hidden;
 }
 
 #content {
 	margin: 3em 0em;
-	max-width: 75vw;
-	min-width: 25em;
 	margin: auto;
 }
 
@@ -148,9 +202,8 @@ button:active {
 	body {
 		font-size: large;
 	}
-	#content {
-		min-width: 40vh;
-		max-width: 100vw;
+	#calculator-app {
+		width: 100vw;
 	}
 	#table {
 		padding: 1em 0.5em;
@@ -160,9 +213,7 @@ button:active {
 		border-top: none;
 		margin: 0;
 		margin-bottom: 1em;
-	}
-	#calculator {
-		width: 100%;
+		width: 100vw;
 	}
 	h1 {
 		font-size: 1.8em;
@@ -176,5 +227,15 @@ button:active {
 	}
 	#screen {
 		border-width: 0.15em;
+	}
+	.github {
+		scale: 60%;
+	}
+	.github a div {
+		font-size: 1.5rem;
+		margin: auto;
+	}
+	.github p {
+		font-size: 1rem;
 	}
 }
