--- a/styles.css
+++ b/styles.css
@@ -25,11 +25,13 @@
 }
 
 .github p {
+	background: rgba(255, 255, 255, 0.1);
+	margin: auto;
 	margin-top: 0.8rem;
 	color: black;
 	text-align: center;
-	font-size: 1.2rem;
-	width: 100%;
+	font-size: 1.4rem;
+	width: fit-content;
 	font-weight: 600;
 }
 
@@ -43,7 +45,7 @@
 	flex-direction: row;
 	align-items: center;
 	justify-content: center;
-	background-color: black;
+	background-image: linear-gradient(black, rgb(37, 37, 37));
 	color: white;
 	text-align: center;
 	padding: 1.2rem;
@@ -55,6 +57,13 @@
 .github i {
 	font-size: 180%;
 	margin-right: 1rem;
+}
+
+.github p a,
+.github p a:visited {
+	color: rgb(38, 38, 159);
+	text-decoration: underline;
+	font-size: inherit;
 }
 
 * {
@@ -229,14 +238,15 @@ button:active {
 	#screen {
 		border-width: 0.15em;
 	}
-	.github {
-		scale: 60%;
+	.github div {
+		scale: 120%;
 	}
 	.github a div {
-		font-size: 1.5rem;
+		font-size: 1.6rem;
 		margin: auto;
+		padding: 1rem;
 	}
 	.github p {
-		font-size: 1rem;
+		font-size: 1.2rem;
 	}
 }
